# droidmedia

./: .clang-format  .git-blame-ignore-revs  .pre-commit-config.yaml  Android.mk  AsyncCodecSource.cpp  AsyncCodecSource.h  AsyncDecodingSource.cpp  AsyncDecodingSource.h  README.md  allocator.cpp  allocator.h  android-config.h  detect_build_targets.sh  droidmedia.cpp  droidmedia.h  droidmediabuffer.cpp  droidmediabuffer.h  droidmediacamera.cpp  droidmediacamera.h  droidmediacamera2.cpp  droidmediacameraconstants.cpp  droidmediacameraconstants.h  droidmediacodec.cpp  droidmediacodec.h  droidmediaconstants.cpp  droidmediaconstants.h  droidmediaconvert.cpp  droidmediaconvert.h  droidmediarecorder.cpp  droidmediarecorder.h  droidmediarecorder2.cpp  hybris.c  libminisf.cpp  mediabuffer.cpp  mediabuffer.h  mediabuffers.h  meson.build  miniaudiopolicy.cpp  minimedia.cpp  miniservice.cpp  (+7 more)
.github/workflows/: pre-commit.yml
flashlight/: flashlightservice.cpp  flashlightservice.h  main.cpp  org.sailfish.flashlight.provider.service  org.sailfish.flashlight.provider.xml
init/: miniaf.rc  miniaudiopolicy.rc  minimediaservice.rc  minisfservice.rc
rpm/: droidmedia-devel.spec  droidmedia.spec
services/: services.h  services_10_0_0.h  services_11_0_0.h  services_12_0_0.h  services_13_0_0.h  services_14_0_0.h  services_15_0_0.h  services_16_0_0.h  services_4_1_2.h  services_4_2_2.h  services_4_4_4.h  services_5_1_0.h  services_5_1_0_custom.h  services_6_0_0.h  services_7_0_0.h  services_7_1_0.h  services_8_1_0.h  services_9_0_0.h
services/audiopolicy/: audiopolicy.h  audiopolicy_10_0_0.h  audiopolicy_11_0_0.h  audiopolicy_12_0_0.h  audiopolicy_13_0_0.h  audiopolicy_14_0_0.h  audiopolicy_15_0_0.h  audiopolicy_16_0_0.h  audiopolicy_5_1_0.h  audiopolicy_6_0_0.h  audiopolicy_7_1_0.h  audiopolicy_7_x_x.h  audiopolicy_8_1_0.h  audiopolicy_9_0_0.h
